backend/logs/scan_3f8a601f1eb4.log
[2026-03-16 03:33:04] [INFO    ] [scan.3f8a601f1eb4] [Recon] Discovering subdomains for pianistprodigy.com...
[2026-03-16 03:33:04] [INFO    ] [scan.3f8a601f1eb4] [Recon] Starting subdomain discovery for pianistprodigy.com
[2026-03-16 03:33:06] [INFO    ] [scan.3f8a601f1eb4] [Recon] assetfinder OK (1.6s, 109 bytes)
[2026-03-16 03:33:07] [INFO    ] [scan.3f8a601f1eb4] [Recon] subfinder OK (2.7s, 52 bytes)
[2026-03-16 03:33:07] [INFO    ] [scan.3f8a601f1eb4] [Recon] Done: 2 from subfinder, 5 from assetfinder, 3 unique total.
[2026-03-16 03:33:07] [INFO    ] [scan.3f8a601f1eb4] [Resolver] Resolving 3 hosts...
[2026-03-16 03:33:07] [INFO    ] [scan.3f8a601f1eb4] [Resolver] Resolving 3 hosts via dnsx
[2026-03-16 03:33:08] [INFO    ] [scan.3f8a601f1eb4] [Resolver] dnsx OK (0.2s, 3509 bytes)
[2026-03-16 03:33:08] [INFO    ] [scan.3f8a601f1eb4] [Resolver] Resolved 3 hosts, 3 unique IPs
[2026-03-16 03:33:08] [INFO    ] [scan.3f8a601f1eb4] [OriginIP] Detecting origin IPs / CDN bypass...
[2026-03-16 03:33:08] [INFO    ] [scan.3f8a601f1eb4] [OriginIP] Probing origin IP for pianistprodigy.com
[2026-03-16 03:33:13] [INFO    ] [scan.3f8a601f1eb4] [OriginIP] Found 3 IPs total. CDN: [], Origin: ['104.21.68.37', '172.67.186.80', '128.199.103.31']
[2026-03-16 03:33:13] [INFO    ] [scan.3f8a601f1eb4] [PortScan] Scanning ports on 3 hosts...
[2026-03-16 03:33:14] [INFO    ] [scan.3f8a601f1eb4] [PortScan] Scanning 3 hosts
[2026-03-16 03:33:21] [INFO    ] [scan.3f8a601f1eb4] [PortScan] naabu OK (6.6s, 3910 bytes)
[2026-03-16 03:33:21] [INFO    ] [scan.3f8a601f1eb4] [PortScan] 18 open ports found across 3 hosts. Ports: [22, 53, 80, 110, 143, 389, 443, 465, 587, 993, 995, 5222, 5269, 7025, 8443]
[2026-03-16 03:33:21] [INFO    ] [scan.3f8a601f1eb4] [ServiceScan] Detecting services on 18 open ports...
[2026-03-16 03:33:21] [INFO    ] [scan.3f8a601f1eb4] [ServiceScan] nmap on 3 target(s), 15 ports
[2026-03-16 03:38:41] [INFO    ] [scan.3f8a601f1eb4] [ServiceScan] nmap OK (320.3s, 28988 bytes)
[2026-03-16 03:38:41] [INFO    ] [scan.3f8a601f1eb4] [ServiceScan] Found 20 services, 5 OS matches
[2026-03-16 03:38:41] [INFO    ] [scan.3f8a601f1eb4] [HTTPProbe] Probing HTTP/HTTPS endpoints...
[2026-03-16 03:38:42] [INFO    ] [scan.3f8a601f1eb4] [HTTPProbe] Probing 81 URLs
[2026-03-16 03:38:42] [WARNING ] [scan.3f8a601f1eb4] [HTTPProbe] httpx failed: Usage: httpx [OPTIONS] URL

Error: No such option: -l

[2026-03-16 03:38:42] [INFO    ] [scan.3f8a601f1eb4] [HTTPProbe] 0 live hosts, tech: [], servers: []
[2026-03-16 03:38:42] [INFO    ] [scan.3f8a601f1eb4] [VulnScan] Running vuln scan on 0 endpoints...
[2026-03-16 03:38:42] [INFO    ] [scan.3f8a601f1eb4] [VulnScan] Starting Nuclei + Nikto in parallel
[2026-03-16 03:38:42] [INFO    ] [scan.3f8a601f1eb4] [VulnScan] Primary URL: https://pianistprodigy.com
[2026-03-16 03:38:43] [WARNING ] [scan.3f8a601f1eb4] [VulnScan] nikto failed: + ERROR: Unable to open '' for write: 
1 at /var/lib/nikto/plugins/nikto_report_text.plugin line 41.

[2026-03-16 03:38:43] [WARNING ] [scan.3f8a601f1eb4] [VulnScan] nuclei failed: 
[2026-03-16 03:38:43] [INFO    ] [scan.3f8a601f1eb4] [VulnScan] Nuclei: 0 findings | Nikto: 0 findings
[2026-03-16 03:38:43] [INFO    ] [scan.3f8a601f1eb4] [TLSScan] Analyzing TLS configuration for pianistprodigy.com...
[2026-03-16 03:38:43] [INFO    ] [scan.3f8a601f1eb4] [TLSScan] Analyzing TLS on pianistprodigy.com:443
[2026-03-16 03:38:43] [WARNING ] [scan.3f8a601f1eb4] [TLSScan] testssl.sh failed: [0;35m/usr/local/bin/testssl.sh: unrecognized option "--no-color"[m

[2026-03-16 03:38:43] [INFO    ] [scan.3f8a601f1eb4] [Aggregation] Aggregating and normalizing all results...
[2026-03-16 03:38:43] [INFO    ] [scan.3f8a601f1eb4] [AIAnalysis] Running AI-powered security analysis...
[2026-03-16 03:38:44] [INFO    ] [scan.3f8a601f1eb4] [Report] Generating professional PDF report...
[2026-03-16 03:38:44] [ERROR   ] [scan.3f8a601f1eb4] Scan failed: BaseDocTemplate.build() got an unexpected keyword argument 'onFirstPage'
Traceback (most recent call last):
  File "/home/ubuntu/pentestbot_2/core/job_manager.py", line 355, in _execute
    pdf_path = pdf_gen.generate(report_data)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/ubuntu/pentestbot_2/report/pdf_generator.py", line 82, in generate
    doc.build(
TypeError: BaseDocTemplate.build() got an unexpected keyword argument 'onFirstPage'

[2026-03-16 03:38:44] [INFO    ] [scan.3f8a601f1eb4] [Error] Scan failed: BaseDocTemplate.build() got an unexpected keyword argument 'onFirstPage'
